--- a/client/bower.json
+++ b/client/bower.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "latest",
-    "angular-resource" : "latest",
-    "underscore" : "latest",
-    "jquery" : "latest",
-    "bootstrap" : "latest"
+    "angular-resource": "latest",
+    "underscore": "latest",
+    "jquery": "latest",
+    "bootstrap.css": "latest"
   }
 }
