--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "name": "player-test-app",
   "version": "0.0.1",
   "dependencies": {
-    "express":"*",
+    "express": "*",
     "jade": "*",
-    "connect-assets" : "*",
-    "coffee-script" : "*",
-    "underscore" : "*",
-    "corespring" : "https://github.com/corespring/corespring-js/tarball/master"
+    "connect-assets": "*",
+    "coffee-script": "*",
+    "underscore": "*",
+    "corespring": "https://github.com/corespring/corespring-js/tarball/master"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-nodeunit": "*",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-compress": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1"
+  },
   "engines": {
     "node": ">= 0.6.0"
   }
