--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "CoreSpring",
-  "name": "player-test-app",
+  "name": "developer-toolkit",
   "version": "0.0.1",
   "dependencies": {
     "express": "*",
