--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "grunt-contrib-nodeunit": "*",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compress": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "~0.4.1"
   },
   "engines": {
     "node": ">= 0.6.0"
