--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "*",
     "jade": "*",
     "connect-assets": "*",
+    "less": "*",
     "coffee-script": "*",
     "underscore": "*",
     "corespring": "https://github.com/corespring/corespring-js/tarball/master"
