--- a/client/assets/js/bower.json
+++ b/client/assets/js/bower.json
@@ -6,8 +6,9 @@
     "angular-resource": "latest",
     "underscore": "latest",
     "jquery": "latest",
-    "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
     "angular-ui" : "latest",
+    "corespring-bootstrap-datepicker" : "git@github.com:corespring/bootstrap-datepicker.git",
+    "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
     "codemirror" : "latest",
     "corespring-ng-services" : "git@github.com:corespring/corespring-ng-services.git"
   }
