--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-coffee": "~0.7.0"
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-jasmine": "latest",
+    "grunt-shell": "~0.2.2"
   }
 }
