--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: node_js
 node_js:
   - 0.10
+notifications:
+  secure: "DTb6Tn6/wb89vBhpS/Ml6EBe437CB00eQYR6S+k3HejtRFQ4hzVOI2xC2+BX\nogUAlaI6iPPRSOy5h4fL0kR2OfUduHGWKu89OhbPpqHBSpMzm6AKPRLx2dO4\nnBSAg6Wl3hemu0/BTfssH3NTqgTIP3dYP9FBpGG42TC9sQl0SAg="
