--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-- 0.10
+- 0.10.2
+- 0.9
 notifications:
-  hipchat: $HIPCHAT_TOKEN@development
-env:
-  matrix:
-    - secure: "F1r3GDnGHiKm9fCWpIveNMxMVzRzgCdFwInXHFPk/yKnjIYYSFTn9ApXJDfE\neue0gMXgpW8j/rVgPRXCf0vKe0OFb7CnqZNLbc3+U7V86ouFTOXTgjW4690A\nCLLJTX8Ce7GDpqVgvXSfewjbx4wJOIHkcPXEcUY2eBs0YqO5iIg="
+  hipchat:
+    rooms:
+      - secure: "cfiHTNXXVKTbaShxiCCAvNQqcrj8xol9tKFLJN7VaXFrtABO3fovRY7GGqlf\nN+irwNyCQbbW56C7uC5ObKNUiry5t9Z6uz+JBH+624xOw3fAhBREiPe4nBqV\n66NOVd7Dp7tV/Anx2P483+i5YCD78zRTQTwcMvvSSaAmJyqZuFw="
+    template:
+      - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
