--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-jasmine": "latest",
-    "grunt-shell": "~0.2.2"
+    "grunt-shell": "~0.2.2",
+    "grunt-contrib-jshint": "~0.5.4"
   }
 }
