--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ node_js:
 notifications:
   hipchat:
     rooms:
-      secure: "cfiHTNXXVKTbaShxiCCAvNQqcrj8xol9tKFLJN7VaXFrtABO3fovRY7GGqlf\nN+irwNyCQbbW56C7uC5ObKNUiry5t9Z6uz+JBH+624xOw3fAhBREiPe4nBqV\n66NOVd7Dp7tV/Anx2P483+i5YCD78zRTQTwcMvvSSaAmJyqZuFw="
-    template:
-      - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+      - secure: "nqqUwj1G2ujTiGFfJOCd4WDpol5NGWuUs74rrT1/FGkNLNNhciftmKL4uKB3\ndRB3AZ4dVQlgHw3koOGAVu9qd7H8b6GAg/lIiP03zntibkf6PCClL1j3i2HE\nbDO2Rl0VsVclp2ttTqsbXQGdhVPMbWmXsxvStvGBn0t6AsFG0B0="
+    on_success: always
+    on_failure: always
