--- a/client/assets/js/bower.json
+++ b/client/assets/js/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "developer-toolkit-client",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "angular-unstable": "~1.1.5",
     "angular-resource": "latest",
@@ -13,6 +13,6 @@
     "corespring-ng-services": "git://github.com/corespring/corespring-ng-services.git",
     "corespring-ng-components": "git://github.com/corespring/corespring-ng-components.git",
     "components-font-awesome": "~3.1.0",
-    "select2": "3.2",
+    "select2": "3.2"
   }
 }
